<resources>
    // String de SaludarApp
    <string name="app_name">My ApplicationCon Xml</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>

    // String de IMC APP
    <string name="edad">Edad</string>
    <string name="peso">Peso KG</string>
    <string name="calculater">Calcular</string>
    <string name="result">Tu Resultado</string>
    <string name="reCalculater">Re-Calcular</string>
    <string name="error">Error</string>
    <string name="btnSaludarApp">Saludar App</string>
    <string name="btnCalculaterIMC">Calculadora IMC</string>
    <string name="btnToDo">To Do</string>
    <string name="titleMenu">Elige tu App</string>

    <string name="bajo_peso">Bajo Peso</string>
    <string name="description_bajo_peso">Estas por debajo de tu peso optimo segun tu peso y altura,</string>

    <string name="Peso_Normal">Normal</string>
    <string name="description_peso_normal">Estas en tu peso optimo segun tu peso y altura,</string>

    <string name="sobre_peso">Sobre Peso</string>
    <string name="description_sobre_peso">Estas por encima de tu peso optimo segun tu peso y altura,</string>

    <string name="obesidad">Obesidad</string>
    <string name="description_obesidad">Estas excedido de tu peso optimo segun tu peso y altura,</string>

    //String de TODOApp
    <string name="titleTODO">Bienvenido Jose Muñoz</string>
    <string name="category">Categoria:</string>

</resources>